<resources>
    <string name="app_name">GymApplication</string>
    <string name="title_activity_bulk">Bulk</string>
    <string name="title_activity_lean">Lean</string>
    <string name="title_activity_strength">Strength</string>
    <string name="title_activity_fitness">Fitness</string>
    <string name="title_activity_weight_loss">WeightLoss</string>
    <string name="title_activity_body_weight">BodyWeight</string>
    <string name="title_activity_bulk_workout">bulkWorkout</string>
    <string name="title_activity_lean_workout">leanWorkout</string>
    <string name="title_activity_strenght_workout">strenghtWorkout</string>
    <string name="title_activity_weightloss_workout">weightlossWorkout</string>
    <string name="title_activity_fitness_workout">fitnessWorkout</string>
    <string name="title_activity_bodyweight_workout">bodyweightWorkout</string>
    <string name="title_activity_bulk_monday">BulkMonday</string>
    <string name="title_activity_bulk_tuesday">BulkTuesday</string>
    <string name="title_activity_bulk_wednesday">BulkWednesday</string>
    <string name="title_activity_bulk_thursday">BulkThursday</string>
    <string name="title_activity_bulk_friday">BulkFriday</string>
    <string name="title_activity_bulk_saturday">BulkSaturday</string>
    <string name="title_activity_lean_monday">LeanMonday</string>
    <string name="title_activity_lean_tuesday">LeanTuesday</string>
    <string name="title_activity_lean_wednesday">LeanWednesday</string>
    <string name="title_activity_lean_thursday">LeanThursday</string>
    <string name="title_activity_lean_friday">LeanFriday</string>
    <string name="title_activity_lean_saturday">LeanSaturday</string>
    <string name="title_activity_fitness_monday">FitnessMonday</string>
    <string name="title_activity_fitness_wednesday">FitnessWednesday</string>
    <string name="title_activity_fitness_thursday">FitnessThursday</string>
    <string name="title_activity_fitness_saturday">FitnessSaturday</string>
    <string name="title_activity_weight_loss_monday">WeightLossMonday</string>
    <string name="title_activity_weight_loss_tuesday">WeightLossTuesday</string>
    <string name="title_activity_weight_loss_wednesday">WeightLossWednesday</string>
    <string name="title_activity_weight_loss_saturday">WeightLossSaturday</string>
    <string name="title_activity_weight_loss_friday">WeightLossFriday</string>
    <string name="title_activity_strenght_monday">StrenghtMonday</string>
    <string name="title_activity_strenght_wednesday">StrenghtWednesday</string>
    <string name="title_activity_strenght_friday">StrenghtFriday</string>
    <string name="title_activity_strenght_thursday">StrenghtThursday</string>
    <string name="title_activity_body_weight_monday">BodyWeightMonday</string>
    <string name="title_activity_body_weight_tuesday">BodyWeightTuesday</string>
    <string name="title_activity_body_weight_thursday">BodyWeightThursday</string>
    <string name="title_activity_body_weight_friday">BodyWeightFriday</string>
    <string name="title_activity_body_weight_saturday">BodyWeightSaturday</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_bulk_monday_workout">BulkMondayWorkout</string>
    <string name="Rest">Rest for about 30 secs to 1 min after each repitition and
        hydrate yourself by consuming water or electrolyte drink
    </string>
    <string name="title_activity_bulk_tuesday_workout">BulkTuesdayWorkout</string>
    <string name="title_activity_bulk_monday_workout1">BulkMondayWorkout1</string>
    <string name="title_activity_bulk_monday_workout2">BulkMondayWorkout2</string>
    <string name="title_activity_bulk_monday_workout3">BulkMondayWorkout3</string>
    <string name="title_activity_bulk_monday_workout4">BulkMondayWorkout4</string>
    <string name="title_activity_bulk_monday_workout5">BulkMondayWorkout5</string>
    <string name="title_activity_bulk_monday_workout6">BulkMondayWorkout6</string>
    <string name="title_activity_bulk_monday_workout7">BulkMondayWorkout7</string>
    <string name="title_activity_bulk_monday_workout8">BulkMondayWorkout8</string>
    <string name="title_activity_bulk_monday_workout9">BulkMondayWorkout9</string>
    <string name="title_activity_bulk_tuesday_workout1">BulkTuesdayWorkout1</string>
    <string name="title_activity_bulk_tuesday_workout2">BulkTuesdayWorkout2</string>
    <string name="title_activity_bulk_tuesday_workout3">BulkTuesdayWorkout3</string>
    <string name="title_activity_bulk_workout_tuesday4">BulkWorkoutTuesday4</string>
    <string name="title_activity_bulk_tuesday_workout4">BulkTuesdayWorkout4</string>
    <string name="title_activity_bulk_tuesday_workout5">BulkTuesdayWorkout5</string>
    <string name="title_activity_bulk_tuesday_workout6">BulkTuesdayWorkout6</string>
    <string name="title_activity_bulk_tuesday_workout8">BulkTuesdayWorkout8</string>
    <string name="title_activity_bulk_tuesday_workout7">BulkTuesdayWorkout7</string>
    <string name="title_activity_bulk_wedenesday_workout1">BulkWedenesdayWorkout1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bulk_wednesday_workout2">BulkWednesdayWorkout2</string>
    <string name="title_activity_bulk_wednesday_workout3">BulkWednesdayWorkout3</string>
    <string name="title_activity_bulk_wednesday_workout4">BulkWednesdayWorkout4</string>
    <string name="title_activity_bulk_wednesday_workout5">BulkWednesdayWorkout5</string>
    <string name="title_activity_bulk_thursday_workout1">BulkThursdayWorkout1</string>
    <string name="title_activity_bulk_thursday_workout2">BulkThursdayWorkout2</string>
    <string name="title_activity_bulk_thursday_workout3">BulkThursdayWorkout3</string>
    <string name="title_activity_bulk_thursday_workout4">BulkThursdayWorkout4</string>
    <string name="title_activity_bulk_thursday_workout5">BulkThursdayWorkout5</string>
    <string name="title_activity_bulk_friday_workout1">BulkFridayWorkout1</string>
    <string name="title_activity_bulk_friday_workout2">BulkFridayWorkout2</string>
    <string name="title_activity_bulk_friday_workout3">BulkFridayWorkout3</string>
    <string name="title_activity_bulk_friday_workout4">BulkFridayWorkout4</string>
    <string name="title_activity_bulk_friday_workout5">BulkFridayWorkout5</string>
    <string name="title_activity_lean_monday_workout">LeanMondayWorkout</string>
    <string name="title_activity_lean_monday_workout1">LeanMondayWorkout1</string>
    <string name="title_activity_lean_monday_workout2">LeanMondayWorkout2</string>
    <string name="title_activity_lean_monday_workout3">LeanMondayWorkout3</string>
    <string name="title_activity_lean_monday_workout4">LeanMondayWorkout4</string>
    <string name="title_activity_lean_monday_workout5">LeanMondayWorkout5</string>
    <string name="title_activity_lean_monday_workout6">LeanMondayWorkout6</string>
    <string name="title_activity_lean_monday_workout7">LeanMondayWorkout7</string>
    <string name="title_activity_lean_tuesday_workout1">LeanTuesdayWorkout1</string>
    <string name="title_activity_lean_tuesday_workout2">LeanTuesdayWorkout2</string>
    <string name="title_activity_lean_tuesday_workout3">LeanTuesdayWorkout3</string>
    <string name="title_activity_lean_tuesday_workout4">LeanTuesdayWorkout4</string>
    <string name="title_activity_lean_tuesday_workout5">LeanTuesdayWorkout5</string>
    <string name="title_activity_lean_tuesday_workout6">LeanTuesdayWorkout6</string>
    <string name="title_activity_lean_tuesday_workout7">LeanTuesdayWorkout7</string>
    <string name="title_activity_lean_tuesday_workout8">LeanTuesdayWorkout8</string>
    <string name="title_activity_lean_wednesday_workout1">LeanWednesdayWorkout1</string>
    <string name="title_activity_lean_wednesday_workout2">LeanWednesdayWorkout2</string>
    <string name="title_activity_lean_wednesday_workout3">LeanWednesdayWorkout3</string>
    <string name="title_activity_lean_wednesday_workout4">LeanWednesdayWorkout4</string>
    <string name="title_activity_lean_wednesday_workout5">LeanWednesdayWorkout5</string>
    <string name="title_activity_lean_wednesday_workout6">LeanWednesdayWorkout6</string>
    <string name="title_activity_lean_wednesday_workout7">LeanWednesdayWorkout7</string>
    <string name="title_activity_lean_wednesday_workout8">LeanWednesdayWorkout8</string>
    <string name="title_activity_lean_thursday_workout1">LeanThursdayWorkout1</string>
    <string name="title_activity_lean_thursday_workout2">LeanThursdayWorkout2</string>
    <string name="title_activity_lean_thursday_workout3">LeanThursdayWorkout3</string>
    <string name="title_activity_lean_thursday_workout4">LeanThursdayWorkout4</string>
    <string name="title_activity_lean_thursday_workout5">LeanThursdayWorkout5</string>
    <string name="title_activity_lean_saturday_workout1">LeanSaturdayWorkout1</string>
    <string name="title_activity_lean_saturday_workout2">LeanSaturdayWorkout2</string>
    <string name="title_activity_lean_saturday_workout3">LeanSaturdayWorkout3</string>
    <string name="title_activity_lean_saturday_workout4">LeanSaturdayWorkout4</string>
    <string name="title_activity_lean_saturday_workout5">LeanSaturdayWorkout5</string>
    <string name="title_activity_weight_loss_monday_workout1">WeightLossMondayWorkout1</string>
    <string name="title_activity_weight_loss_monday_workout2">WeightLossMondayWorkout2</string>
    <string name="title_activity_weight_loss_monday_workout3">WeightLossMondayWorkout3</string>
    <string name="title_activity_weight_loss_monday_workout4">WeightLossMondayWorkout4</string>
    <string name="title_activity_weight_loss_monday_workout5">WeightLossMondayWorkout5</string>
    <string name="title_activity_weight_loss_monday_workout6">WeightLossMondayWorkout6</string>
    <string name="title_activity_weight_loss_monday_workout7">WeightLossMondayWorkout7</string>
    <string name="title_activity_weight_loss_monday_workout8">WeightLossMondayWorkout8</string>
    <string name="bulkmeal2">
       A Banana with 1 spoon of peanut butter on a slice of whole wheat bread.
    </string>
    <string name="bulkmeal3">3 rotis or Brown rice with scrambled eggs(3whites 1 whole egg) or lentils,peas or beans(daal,rajma etc).</string>
    <string name="bulkmeal4">Take 1 cup oats , 1 scoop whey protein or skimmed milk powder and blend it. Then add 1 spoon of peanut butter , 1 whole banana , chocolate syrup(If using skimmed milk powder) , few ice cubes and water. Blend the whole mixture and have it 2 hours prior to gym. 10 mins prior to gym have black coffee </string>
    <string name="bulkmeal5">Protein shake(1 scoop with water) or 4 to 5 egg whites or skimmed milk powder (1 or 2 scoops)</string>
    <string name="bulkmeal6">2 rotis or brown rice with 200gms chicken breast or peas/beans(rajma , chowli  etc) </string>
    <string name="leanmeal1"> Oats with 1 scoop of Whey Protien or Skimmed milk powder and water. Add some almonds or peanuts , honey. Also have a fruit (Apple , Orange , Banana)
</string>
    <string name="leanmeal2">2 egg whites/100gms paneer and a fruit (orange , watermelon etc) </string>
    <string name="leanmeal3">2 rotis or brown rice with lentils,peas or beans(daal,rajma etc) </string>
    <string name="leanmeal4">Take 1 cup oats , 1 scoop whey protein or skimmed milk powder and blend it. Then add 1 spoon of peanut butter , 1 banana , chocolate syrup(If using skimmed milk powder) , few ice cubes and water. Blend the whole mixture and have it 2 hours prior to gym. Then 10 mins prior to workout have a cup of black coffee</string>
    <string name="leanmeal5">Protein shake(1 scoop with water) or 4 to 5 egg whites or skimmed milk powder (1 or 2 scoops)</string>
    <string name="leanmeal6">Vegetable salad with 100 to 200 gms chicken breast/paneer.</string>
    <string name="fitnessmeal1"> Oats with skimmed milk and a banana or apple</string>
</resources>